'push by pim@rodin+linux+5.15.119+quiqr-desktop-app-0.17.14'

--- a/quiqr/model/includes/dynamics.yaml
+++ b/quiqr/model/includes/dynamics.yaml
@@ -10,3 +10,7 @@
   _mergePartial: block_schedule
   content_type: block_schedule
 
+- key: dynbxcentercontent
+  _mergePartial: block_centercontent
+  content_type: block_centercontent
+
