--- a/quiqr/model/base.yaml
+++ b/quiqr/model/base.yaml
@@ -12,12 +12,38 @@ menu:
        - key: homepage
        - key: blog_items
 
+  - key: assets
+    title: Assets
+    menuItems:
+       - key: images
+
   - key: settings
     title: Settings
     menuItems:
        - key: mainConfig
 
 singles:
+
+  - key: images
+    title: Images
+    hidePreviewIcon: true
+    hideExternalEditIcon: true
+    hideSaveButton: true
+    file: static/.pogo-images-paragraph.md
+    fields:
+      - key: image
+        type: bundle-manager
+        path: "/static/images/"
+        extensions:
+          - svg
+          - png
+          - jpg
+          - gif
+        fields:
+          - key: thumb
+            title: Thumb
+            type: bundle-image-thumbnail
+
   - key: mainConfig
     title: Site Configuration
     file: config.yml
