--- a/config.yml
+++ b/config.yml
@@ -174,7 +174,7 @@ params:
     - disabled: true
       title: FAQ
       url: /index.html#Faq
-    - disabled: false
+    - disabled: true
       title: Opdrachten
       url: /tags/opdracht/
     - disabled: false
